fix newspaper: sec3: replace some divs for h1 and p, correct text content on mobile, height, fonts, text position, img size; delete unnecessary and nested classes.

--- a/src/pages/Newspaper/Newspaper.module.css
+++ b/src/pages/Newspaper/Newspaper.module.css
@@ -236,85 +236,42 @@ h2 {
 .thirdNewsContainer {
   background: url(/public/backgthird.png) no-repeat;
   background-size: cover;
-  width: 100%;
-  min-height: 950px;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  height: 950px;
+  height: 1037px;
+  gap: 112px;
 }
 
 .mobileThirdNewsContainer {
   display: none;
 }
 
-.thirdNewsContainerBox {
-  height: 950px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
+.thirdNewsImg > img {
+  /* In figma it is 640x441, but it seams to small and I made it bigger */
+  width: 700px;
+  height: 500px;
 }
 
-.thirdSectionLeft {
-  /* width: 770px; */
-  height: inherit;
-  display: flex;
-  justify-content: center;
-  margin-top: 250px;
-  margin-left: 100px;
-  margin-right: -80px;
-}
-
-.thirdSectionLeft > img {
-  width: 640px;
-  height: 440px;
-}
-
-.thirdNewsImage {
-  width: 100%;
-  height: 700px;
-  display: flex;
-  justify-content: flex-end;
-  margin: auto;
-  margin-left: 150px;
-  margin-top: 100px;
-}
-
-.thirdSectionRight {
-  width: 748px;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.innerThirdSectionRight {
-  margin-top: -50px;
-  height: 460px;
-  width: 500px;
+.thirdNewsContent {
+  width: 513px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 48px;
 }
 
-.innerThirdAddWalls {
+.thirdNewsContent h1 {
   color: #fff;
   font-feature-settings: 'clig' off, 'liga' off;
-  font-family: Gotham-medium;
+  font-family: gotham-medium;
   font-size: 53px;
   font-style: normal;
   font-weight: 500;
   line-height: 63.6px;
-  /* 63.6px */
 }
 
-.parag1 {
-  align-items: center;
-  justify-content: center;
-}
-
-.innerParag1 {
+.thirdNewsContent p {
   color: #fff;
   font-feature-settings: 'clig' off, 'liga' off;
   font-family: gotham-book;
@@ -656,7 +613,7 @@ h2 {
   .secondNewsContainer {
     display: none;
   }
-  
+
   .mobileSecondNewsBox1 h1 {
     color: var(--Primary-Black-1, #1e1e1e);
     text-align: center;
@@ -666,7 +623,7 @@ h2 {
     font-weight: 500;
     line-height: 36px;
   }
-  
+
   .mobileSecondNewsBox2 {
     width: 1100px;
     display: flex;
@@ -675,7 +632,7 @@ h2 {
     align-items: center;
     gap: 30px;
   }
-  
+
   .mobileSecondNewsCard {
     padding: 30px;
     width: 273px;
@@ -685,13 +642,13 @@ h2 {
     align-items: center;
     gap: 16px;
   }
-  
+
   .mobileSecondNewsCardImg {
     height: 60px;
     display: flex;
     align-items: end;
   }
-  
+
   .mobileSecondNewsCard h1 {
     color: var(--Primary-Black-1, #1e1e1e);
     font-family: gotham-medium;
@@ -701,7 +658,7 @@ h2 {
     line-height: 24px;
     text-align: center;
   }
-  
+
   .mobileSecondNewsCard p {
     color: var(--Primary-Black-1, #1e1e1e);
     font-family: gotham-book;
@@ -711,11 +668,11 @@ h2 {
     line-height: 24px;
     margin: 0;
   }
-  
+
   .mobileSecondNewsCard span {
     font-family: gotham-medium;
     font-weight: 500;
-  }  
+  }
 
   /* Third MOBILE SECTION */
   .thirdNewsContainer {
@@ -726,82 +683,44 @@ h2 {
     background: url(/public/backgthird.png) no-repeat;
     background-size: cover;
     display: flex;
-    width: 100%;
-    height: 1100px;
-    position: relative;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    height: 857px;
+    gap: 77px;
+  }
+
+  .mobileThirdNewsImg > img {
+    width: 350px;
+    height: 250px;
+  }
+
+  .mobileThirdNewsContent {
+    width: 350px;
+    display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    gap: 30px;
   }
-
-  .mainThirdMobile {
-    display: flex;
-    width: 350px;
-    height: 1305px;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 180px;
-  }
-
-  .rightMainMobile3 {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    margin-top: 100px;
-    margin-left: 30px;
-    margin-right: 30px;
-  }
-
-  .textMobile3 {
-    color: var(--White, #fff);
+  
+  .mobileThirdNewsContent h1 {
+    color: #fff;
+    font-feature-settings: 'clig' off, 'liga' off;
     font-family: gotham-medium;
     font-size: 24px;
     font-style: normal;
     font-weight: 500;
-    line-height: 131.5%;
-    /* 72.325px */
-    z-index: 5;
+    line-height: 36px;
   }
-
-  .paragMobile3 {
-    width: 100%;
-    height: 90px;
-    margin-top: 30px;
-    margin-bottom: 30px;
-  }
-
-  .innerParagMobile3 {
-    width: 352px;
-    height: 95px;
-    color: var(--White, #fff);
+  
+  .mobileThirdNewsContent p {
+    color: #fff;
+    font-feature-settings: 'clig' off, 'liga' off;
     font-family: gotham-book;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
-    /* 157.143% */
-  }
-
-  .leftMainMobile3 {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 5;
-  }
-
-  .leftImgInfoMobile3 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 50px;
-    margin-top: 150px;
-  }
-
-  .leftImgMobile3 {
-    width: 500px;
-    height: 360px;
-    transition: all 2s ease;
   }
 
   /* Fourth MOBILE SECTION */
